--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <title>Hello Blog!</title>
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <!--<link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">-->
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
@@ -28,22 +28,27 @@
 
   <body>
     <div class="container">
+      <div class="row">
       <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+        <nav class="navigation purple accent-2">
+          <ul class="nav nav-pills pull-left">
+            <li><a href="/">Home</a></li>
+            <li><a href="/posts">Events</a></li>
+            <li><a href="/login">Log In</a></li>
+            <li><a href="/signup">Sign Up</a></li>
           </ul>
         </nav>
       </header>
+      <main class="col s12 grey lighten-3" role="main">
 
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
-      <main role="main">
         <%= render @view_module, @view_template, assigns %>
       </main>
 
-    </div> <!-- /container -->
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    </div>
+  </div> <!-- /container -->
+  <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
