--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -1,28 +1,19 @@
-<h2>Show post</h2>
+<div class="white card-panel hoverable" style="border-radius:10px; padding:20px;">
+  <div class="row" style="padding-left:20px;">
+    <h2><%= @post.title %></h2>
 
-<ul>
-
-  <li>
-    <strong>Title:</strong>
-    <%= @post.title %>
-  </li>
-
-  <li>
-    <strong>Body:</strong>
     <%= @post.body %>
-  </li>
 
-</ul>
+    <%= render Blog.CommentView, "new.html",
+    				conn: @conn,
+    				post: @post,
+    				comment_changeset: @comment_changeset %>
 
-<%= render Blog.CommentView, "new.html",
-				conn: @conn,
-				post: @post,
-				comment_changeset: @comment_changeset %>
+    <%= for comment <- @post.comments do %>
+    	<p class="card-panel hoverable"><%= comment.body %> </p>
+    <% end %>
 
-<%= for comment <- @post.comments do %>
-	<li><%= comment.body %></li>
-<% end %>
-<ul>	
-
-<span><%= link "Edit", to: post_path(@conn, :edit, @post) %></span>
-<span><%= link "Back", to: post_path(@conn, :index) %></span>
+    <span><%= link "Edit", to: post_path(@conn, :edit, @post) %></span>
+    <span><%= link "Back", to: post_path(@conn, :index) %></span>
+    </div>
+</div>
