--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,48 +7,80 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Blog!</title>
-    <!--<link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">-->
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
+
+<!-- Include Editor style.
+<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/css/froala_style.min.css" rel="stylesheet" type="text/css" />
+
+<!-- Include external JS libs. --
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
+
+<!-- Include Editor JS files. --
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/js/froala_editor.pkgd.min.js"></script>
+-->
+
+
+
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.js"></script>
 
+    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">
+
+
+
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.1/quill.js"></script>
+
+
+
+
+    <!--  <link href="/css/app.css" rel="stylesheet"> -->
+    <style>
+    </style>
   </head>
 
-  <body>
+  <body class="cyan">
     <div class="container">
-      <div class="row">
       <header class="header">
-        <nav class="navigation purple accent-2">
-          <ul class="nav nav-pills pull-left">
-            <li><a href="/">Home</a></li>
-            <li><a href="/posts">Events</a></li>
-            <li><a href="/login">Log In</a></li>
-            <li><a href="/signup">Sign Up</a></li>
-          </ul>
+        <nav role="navigation" style="border-radius:5px;" class="white z-depth-4">
+          <div class="nav-wrapper">
+            <img class="brand-logo left" src="https://static1.squarespace.com/static/59462ef51b10e3c4c9653db5/t/595ed7dfc534a5e05a557713" style="max-width:55px; position:relative;"/>
+            <ul class="menu right">
+              <li class"active cyan" style="background-color:green;"><a href="/posts">Home</a></li>
+            </ul>
+        </div>
         </nav>
       </header>
-      <main class="col s12 grey lighten-3" role="main">
 
-        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <main role="main">
 
+        <%= if  get_flash(@conn, :error) != nil or get_flash(@conn, :info) !=nil do %>
+          <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+          <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <% end %>
         <%= render @view_module, @view_template, assigns %>
       </main>
 
-    </div>
-  </div> <!-- /container -->
-  <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    </div> <!-- /container -->
+    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
