--- a/web/templates/post/new.html.eex
+++ b/web/templates/post/new.html.eex
@@ -6,7 +6,7 @@
 <%= render "form.html", changeset: @changeset,
                         action: post_path(@conn, :create) %>
 
-<span><%= link "Back", to: post_path(@conn, :index) %></span>
+<span><%= link "Back", to: post_path(@conn, :index), class: "btn pink A400"%></span>
 
 </div>
 
