--- a/web/templates/post/filters.html.eex
+++ b/web/templates/post/filters.html.eex
@@ -21,7 +21,22 @@
     <i class="material-icons prefix">person_outline</i>
     <input id="icon_prefix" type="text" class="validate" placeholder="Search Author" name="author_search">
   </div>
+  <div class="input-field col s12 m3">
+    <i class="material-icons prefix">date_range</i>
+    <input id="icon_prefix" type="text" class="validate" placeholder="YYYY-MM-DD" name="date_search">
+  </div>
+  <div class="input-field col s12 m3">
+    <i class="material-icons prefix">thumb_up</i>
+    <input id="icon_prefix" type="text" class="validate" placeholder="5-10" name="likes_search">
+  </div>
+  <div col s12 m3">
+    <input  name="ratings_sort" type="checkbox" id="hrate"/>
+    <label for="hrate" value="desc">Sort By Highest Rated First</label>
+    <input  name="ratings_sort" type="checkbox" id="lrate"/>
+    <label for="lrate" value="asc">Sort By Lowest Rated First</label>
+  </div>
 </div>
+
 
 <div class="input-field col s12 m6 l4 xl2"
   <span>
