--- a/web/templates/post/index.html.eex
+++ b/web/templates/post/index.html.eex
@@ -20,12 +20,14 @@
 <hr/>
 <div class="row">
   <div class="col s12">
-    <%= link "Create A New Post", to: post_path(@conn, :new), class: "btn blue-grey darken-2", style: "position: right" %>
+    <%= link "Create A New Post", to: post_path(@conn, :new), class: "btn blue-grey darken-2", style: "position: right;" %>
+  </div>
+  <div class="col s12">
+    <%= paginate @conn, @kerosene, theme: :foundation %>
   </div>
 </div>
-<br/>
 <%= for post <- @posts do %>
-<div class="row hoverable card-panel cyan A700" style="border-radius:5px;">
+<div class="row hoverable card-panel light-blue A100" style="border-radius:5px;">
     <div class="col s12 m3">
       <h5><%= post.title %></h5>
     </div>
