--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -34,16 +34,16 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
-    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+<!--    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
 
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-
-    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
+        <script src="//cdn.ckeditor.com/4.7.2/standard/ckeditor.js"></script>
+  <!--  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.js"></script>
 
-    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">
+<!--    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">
 
 
 
@@ -73,13 +73,13 @@
         </nav>
       </header>
       <br/>
-
       <main role="main">
 
         <%= if  get_flash(@conn, :error) != nil or get_flash(@conn, :info) !=nil do %>
           <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
           <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
         <% end %>
+
         <%= render @view_module, @view_template, assigns %>
       </main>
 
