--- a/web/templates/auth/login.html.eex
+++ b/web/templates/auth/login.html.eex
@@ -10,7 +10,7 @@ login
       <div class="card card-signup">
     <form class="col s12"  method="POST">
       <br/>
-      <h4 class="center-align">Welcome.</h4>
+      <h4 class="center-align">Welcome to Blogify.</h4>
       <p class="center-align">
         LOGIN NOW
       </p>
@@ -40,10 +40,10 @@ login
           <a href="/reset-password">Forgot password?</a>
         </div>
       </div>
-    
+
       <div class="row">
         <div class="col s12 center-align">
-          <a href="/register">Register Now!</a>
+          <a href="/signup">Register Now!</a>
         </div>
       </div>
 
