--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -34,16 +34,16 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
-<!--    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
 
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-        <script src="//cdn.ckeditor.com/4.7.2/standard/ckeditor.js"></script>
-  <!--  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
+
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.js"></script>
 
-<!--    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">
 
 
 
@@ -55,34 +55,58 @@
 
     <!--  <link href="/css/app.css" rel="stylesheet"> -->
     <style>
+    .containerz {
+      padding-right: 30px;
+      padding-left: 30px;
+    }
     </style>
   </head>
 
-  <body class="cyan">
-    <div class="container">
+  <body class="" style="background-color: #CCC;">
+    <div class="">
       <header class="header">
-        <nav role="navigation" style="border-radius:5px;" class="white z-depth-4">
+        <nav role="navigation" style="border-radius:5px;" class="grey z-depth-4" style="color: black;">
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
           <div class="nav-wrapper">
           <ul>  <li>  <img class="brand-logo left" src="https://static1.squarespace.com/static/59462ef51b10e3c4c9653db5/t/595ed7dfc534a5e05a557713" style="max-height:50px; position:relative;"/> </li>
-                <li> 1-832-829-2822 </li>
+                <li> <p  style="font-size: 20px;">Blogify</p> </li>
+
           </ul>
-          <ul class="menu left">
-              <li class"active cyan" style="background-color:#F50057;"><a href="/posts">Home</a></li>
+          <ul class="menu right right hide-on-med-and-down">
+              <li class"active cyan" ><a href="/posts">Home</a></li>
+              <li class"active cyan" ><a href="/posts">About</a></li>
+              <li class"active cyan" ><a href="/posts">Help</a></li>
+
+              <li class"active cyan" ><a href="/posts">Posts</a></li>
+              <li class"active cyan" ><a href="/login">Login</a></li>
+              <li>              <i class="material-icons">search</i>
+ </li>
+              <li>
+              <input style = "color: white";class="form-control" id="eoFreelancerSearchInput" type="search" name="q" placeholder="Search" data-eo-focus="search.focus">
+            </li>
+
             </ul>
+            <ul class="side-nav" id="mobile-demo">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+          </ul>
         </div>
         </nav>
       </header>
       <br/>
+      <div class =" containerz">
       <main role="main">
 
         <%= if  get_flash(@conn, :error) != nil or get_flash(@conn, :info) !=nil do %>
           <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
           <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
         <% end %>
-
         <%= render @view_module, @view_template, assigns %>
       </main>
-
+    </div>
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
