--- a/web/templates/channel/channel.html.eex
+++ b/web/templates/channel/channel.html.eex
@@ -1,9 +1,10 @@
-<div>
-<h4>  <%= @channel.name %> </h4>
-</div>
 
 
-<main class=" container post-cards" role="main">
+<main class=" post-cards" role="main">
+  <div>
+  <h4 style="text-align: center;">  <%= @channel.name %> Channel</h4>
+  </div>
+
   <div class="row">
     <div id="main-feed" class="col s12">
     <!-- main loop -->
@@ -281,14 +282,86 @@
 
     </div>
     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-            <a class="btn-floating btn-large red">
+            <a class="btn-floating btn-large green">
               <i class="material-icons">mode_edit</i>
             </a>
             <ul>
-              <li><a href =" /channels/postform/<%=@channel.id%>" class="btn-floating red" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">insert_chart</i></a></li>
-              <li><a class="btn-floating yellow darken-1" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">format_quote</i></a></li>
-              <li><a class="btn-floating green" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">publish</i></a></li>
-              <li><a class="btn-floating blue" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">attach_file</i></a></li>
+              <li><a href ="#" class="btn-floating yellow " data-toggle="modal" data-target="#myModal" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">add</i></a></li>
+
+              <li><a href =" /channels/leave/<%=@channel.id%>/<%=@user.id%>"class="btn-floating  red darken-1" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">delete</i></a></li>
+              <li><a href =" /channels/view/members/<%=@channel.id%>" class="btn-floating blue" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="material-icons">face</i></a></li>
+
             </ul>
+      </div>
+
+
+
+      <div class="container">
+
+        <!-- Trigger the modal with a button -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Create Channel</h4>
+              </div>
+              <div class="modal-body">
+                <form action="/channels/create/posts/:channel_id" method="post">
+                  <div class="row">
+
+                    <div class="input-field col s12 m6">
+                      <i class="material-icons prefix">mode_edit</i>
+                      <input type="text" name="title" id="title"/>
+                      <label style="font-size:20px;" for="title">Title</label>
+                    </div>
+
+                    <div class="input-field col s12 m6">
+                      <i class="material-icons prefix">mode_edit</i>
+                      <input type="text" name="tags" id="tags" placeholder="Place a comma between each tag like this: tag1,tag2"/>
+                      <label style="font-size:20px;" for="tags">Tags</label>
+                      <br/>
+
+                    </div>
+
+
+                    <div class="input-field col s12 m12">
+                      <i class="material-icons prefix" style="color:black;">mode_edit</i>
+                      <label style="font-size:20px;" for="body">
+                        <p>Content</p>
+                      </label>
+                      <br/><br/>
+                      <textarea name="body" id="summernote" rows="10"/></textarea>
+                    </div>
+
+                    <script>
+                      $(document).ready(function() {
+                         $('#summernote').summernote({
+                         height: 300,                 // set editor height
+                        minHeight: null,             // set minimum height of editor
+                        maxHeight: null,             // set maximum height of editor
+                        focus: true
+                        });
+                      });
+                    </script>
+
+
+
+                    <div class="input-field col s12"
+                      <span>
+                          <button class="submit btn btn-primary waves-effect waves-light cyan">Submit</button>
+                      </span>
+                    </div>
+                  </div>
+                </form>
+              </div>
+
+          </div>
+        </div>
+
       </div>
         </main>
