--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -27,30 +27,39 @@
 <!-- Include Editor JS files. --
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/js/froala_editor.pkgd.min.js"></script>
 -->
-
+<script src="https://cdn.ckeditor.com/4.7.2/standard/ckeditor.js"></script>
 
 
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
-    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+  <!--  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
 
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-
+<!--
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.js"></script>
 
-    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">--
 
 
 
     <!-- Include the Quill library --
     <script src="https://cdn.quilljs.com/1.3.1/quill.js"></script>-->
 
+<script>
+$(document).ready(function(){
+  // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+  $('.modal').modal();
+});
+$(document).ready(function() {
+$('select').material_select();
+});
 
+</script>
 
 
     <!--  <link href="/css/app.css" rel="stylesheet"> -->
