--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -39,6 +39,22 @@
       <br/>
     </div>
 
+    <div class="input-field col s12">
+    <select>
+      <option value="" disabled selected>Choose your option</option>
+      <option value="1">Option 1</option>
+      <option value="2">Option 2</option>
+      <option value="3">Option 3</option>
+    </select>
+    <label>Materialize Select</label>
+  </div>
+
+  <script>
+  $(document).ready(function() {
+ $('select').material_select();
+});
+  </script>
+
     <div class="input-field col s12 m12">
       <i class="material-icons prefix" style="color:black;"">mode_edit</i>
       <label style="font-size:20px;" for="body">
